# x-simulator

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  mkdocs.yml  noxfile.py  pyproject.toml
.cspell/: custom-dictionary.txt
docs/: index.md
src/x_simulator/app/: video_edit.py
src/x_simulator/components/basic/: instructions.py  processor.py
src/x_simulator/components/basic/instructions/: arithmetic.py  assignment.py  base.py  bitwise.py  jumps.py  routine.py  stack.py
src/x_simulator/core/: asm_parser.py  const.py  instruction.py  memory.py  processor.py
src/xsim/app/: gui.py  gui.tcss  video_edit.py
src/xsim/components/basic/: processor.py
src/xsim/components/basic/instructions/: __init__.py  arithmetic.py  assignment.py  base.py  bitwise.py  jumps.py  routine.py  stack.py
src/xsim/core/: asm_parser.py  const.py  instruction.py  memory.py  processor.py
tests/: __init__.py  source.asm
tests/components/basic/instructions/: test_arithmetic_instructions.py  test_assignment_instructions.py  test_base_instructions.py  test_bitwise_instructions.py  test_jumps_instructions.py  test_routine_instructions.py  test_stack_instructions.py
tests/core/: test_asm_parser.py  test_instruction.py  test_memory.py  test_processor.py
tests/instructionsTest/: baseInstructionsTest.py  bitwiseInstructionsTest.py  test_arithmetic_instructions.py  test_assignment_instructions.py  test_jumps_instructions.py  test_routine_instructions.py  test_stack_instructions.py
tests/processor/: processorTest.py  test_memory.py  test_processor.py
