[project]
name = "x-simulator"
version = "0.1.0"
description = "simple simultor for asm programs"
authors = [
    { name = "Panaintescu Adrian Valentin", email = "adrian.cert@gmail.com" },
    { name = "Petrache Liviu Andrei", email = "petrache.andrei1@gmail.com" },
    { name = "Neculea Mihaela", email = "m.neculea@yahoo.com" },
]
dependencies = [
    "intervaltree>=3.1.0",
    "lark>=1.1.9",
    "textual[syntax]>=0.59.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "ruff>=0.4.4",
    "nox==2024.4.15",
]
tests = [
    "coverage[toml]>=7.5.1",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "mkdocs-kroki-plugin>=0.7.1",
    "mkdocs-material>=9.5.21",
    "pymdown-extensions>=10.8.1",
]

[project.scripts]
xsim = "xsim.app.gui:main"

[tool.coverage.report]
show_missing = true
fail_under = 10
omit = [
    "*__main__.py",
    "*__init__.py",
    "src/xsim/app/**",
    "src/xsim/core/asm_parser.py",
    "src/xsim/core/const.py",
]
exclude_also = [
    "def __repr__",
    "raise .*",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff.lint]
extend-select = ["C", "N", "SIM", "PTH", "I", "PL"]
